--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,18 @@
-version: '3.8'
-
 services:
   openldap:
-    image: osixia/openldap:1.5.0
+    image: bitnami/openldap:2.6
     container_name: openldap
     ports:
-      - "389:389"
-      - "636:636"
+      - "1389:1389"
+      - "1636:1636"
     environment:
-      LDAP_ORGANISATION: "My Awesome Company"
-      LDAP_DOMAIN: "example.org"
-      LDAP_ADMIN_PASSWORD: "adminpassword"
+      - LDAP_ADMIN_USERNAME=admin
+      - LDAP_ADMIN_PASSWORD=adminpassword
+      - LDAP_ROOT=dc=example,dc=org
+      - LDAP_USERS=einstein,newton
+      - LDAP_USER_PASSWORDS=password,password
     volumes:
-      - ldap_data:/var/lib/ldap
-      - ldap_config:/etc/ldap/slapd.d
-    networks:
-      - auth_network
-
-  phpldapadmin:
-    image: osixia/phpldapadmin:0.9.0
-    container_name: phpldapadmin
-    ports:
-      - "8090:80"
-    environment:
-      PHPLDAPADMIN_LDAP_HOSTS: "openldap"
-      PHPLDAPADMIN_HTTPS: "false"
-    depends_on:
-      - openldap
+      - ldap_data:/bitnami/openldap
     networks:
       - auth_network
 
@@ -36,9 +22,9 @@ services:
     ports:
       - "8080:8080"
     environment:
-      KEYCLOAK_ADMIN: "admin"
-      KEYCLOAK_ADMIN_PASSWORD: "admin"
-      KC_DB: "dev-file"
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+      - KC_DB=dev-file
     command: "start-dev"
     depends_on:
       - openldap
@@ -51,5 +37,3 @@ networks:
 
 volumes:
   ldap_data:
-  ldap_config:
-
